// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DailyStepsScreen should render FitKit permissions screen 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    currentStreak={0}
    fitKitAvailable={true}
    hasPermission={false}
    isDoneToday={false}
    isLoading={false}
    isOnline={true}
    lastUpdate="thing"
    maxStreak={4}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    steps={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Pad
          height={60}
        />,
        <TouchableOpacity
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            isGrayScale={true}
            isLoading={false}
          />
        </TouchableOpacity>,
        <DailyStepsFitKitAuthorise
          onPress={[MockFunction]}
        />,
        false,
      ],
      "footerImage": "gray_forest",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 60,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": <YuCoin
            isGrayScale={true}
            isLoading={false}
          />,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isGrayScale": true,
            "isLoading": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      false,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Pad
            height={60}
          />,
          <TouchableOpacity
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              isGrayScale={true}
              isLoading={false}
            />
          </TouchableOpacity>,
          <DailyStepsFitKitAuthorise
            onPress={[MockFunction]}
          />,
          false,
        ],
        "footerImage": "gray_forest",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              isGrayScale={true}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "isGrayScale": true,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render FitKit unavailable screen 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    currentStreak={0}
    fitKitAvailable={false}
    hasPermission={true}
    isDoneToday={false}
    isLoading={false}
    isOnline={true}
    lastUpdate="thing"
    maxStreak={4}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    steps={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Pad
          height={60}
        />,
        <TouchableOpacity
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            isGrayScale={false}
            isLoading={false}
          />
        </TouchableOpacity>,
        <DailyStepsFitKitUnavailable />,
        false,
      ],
      "footerImage": "large_forest",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 60,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": <YuCoin
            isGrayScale={false}
            isLoading={false}
          />,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isGrayScale": false,
            "isLoading": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      false,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Pad
            height={60}
          />,
          <TouchableOpacity
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              isGrayScale={false}
              isLoading={false}
            />
          </TouchableOpacity>,
          <DailyStepsFitKitUnavailable />,
          false,
        ],
        "footerImage": "large_forest",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              isGrayScale={false}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "isGrayScale": false,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render daily streak 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    currentStreak={0}
    displayStreak={true}
    fitKitAvailable={true}
    hasPermission={true}
    isDoneToday={false}
    isLoading={false}
    isOnline={true}
    lastUpdate="thing"
    maxStreak={4}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    steps={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Pad
          height={60}
        />,
        <TouchableOpacity
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            isGrayScale={false}
            isLoading={false}
          />
        </TouchableOpacity>,
        <DailyStepsOnline
          coinsToday={0}
          onCtaPress={[MockFunction]}
          steps={0}
        />,
        <Streak
          currentStreak={0}
          isFinished={false}
          maxStreak={4}
          onPress={[MockFunction]}
        />,
      ],
      "footerImage": "large_forest",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 60,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": <YuCoin
            isGrayScale={false}
            isLoading={false}
          />,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isGrayScale": false,
            "isLoading": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "coinsToday": 0,
          "onCtaPress": [MockFunction],
          "steps": 0,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "currentStreak": 0,
          "isFinished": false,
          "maxStreak": 4,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Pad
            height={60}
          />,
          <TouchableOpacity
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              isGrayScale={false}
              isLoading={false}
            />
          </TouchableOpacity>,
          <DailyStepsOnline
            coinsToday={0}
            onCtaPress={[MockFunction]}
            steps={0}
          />,
          <Streak
            currentStreak={0}
            isFinished={false}
            maxStreak={4}
            onPress={[MockFunction]}
          />,
        ],
        "footerImage": "large_forest",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              isGrayScale={false}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "isGrayScale": false,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "coinsToday": 0,
            "onCtaPress": [MockFunction],
            "steps": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "currentStreak": 0,
            "isFinished": false,
            "maxStreak": 4,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render default values 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    currentStreak={0}
    fitKitAvailable={true}
    hasPermission={true}
    isDoneToday={false}
    isLoading={false}
    isOnline={true}
    lastUpdate="thing"
    maxStreak={4}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    steps={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Pad
          height={60}
        />,
        <TouchableOpacity
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            isGrayScale={false}
            isLoading={false}
          />
        </TouchableOpacity>,
        <DailyStepsOnline
          coinsToday={0}
          onCtaPress={[MockFunction]}
          steps={0}
        />,
        false,
      ],
      "footerImage": "large_forest",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 60,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": <YuCoin
            isGrayScale={false}
            isLoading={false}
          />,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isGrayScale": false,
            "isLoading": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "coinsToday": 0,
          "onCtaPress": [MockFunction],
          "steps": 0,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      false,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Pad
            height={60}
          />,
          <TouchableOpacity
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              isGrayScale={false}
              isLoading={false}
            />
          </TouchableOpacity>,
          <DailyStepsOnline
            coinsToday={0}
            onCtaPress={[MockFunction]}
            steps={0}
          />,
          false,
        ],
        "footerImage": "large_forest",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              isGrayScale={false}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "isGrayScale": false,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "coinsToday": 0,
            "onCtaPress": [MockFunction],
            "steps": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render loading screen 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    currentStreak={0}
    fitKitAvailable={true}
    hasPermission={true}
    isDoneToday={false}
    isLoading={true}
    isOnline={true}
    lastUpdate="thing"
    maxStreak={4}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    steps={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Pad
          height={60}
        />,
        <TouchableOpacity
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            isGrayScale={false}
            isLoading={true}
          />
        </TouchableOpacity>,
        <DailyStepsLoading />,
        false,
      ],
      "footerImage": "large_forest",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 60,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": <YuCoin
            isGrayScale={false}
            isLoading={true}
          />,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isGrayScale": false,
            "isLoading": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      false,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Pad
            height={60}
          />,
          <TouchableOpacity
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              isGrayScale={false}
              isLoading={true}
            />
          </TouchableOpacity>,
          <DailyStepsLoading />,
          false,
        ],
        "footerImage": "large_forest",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              isGrayScale={false}
              isLoading={true}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "isGrayScale": false,
              "isLoading": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render offline screen 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    currentStreak={0}
    fitKitAvailable={true}
    hasPermission={true}
    isDoneToday={false}
    isLoading={false}
    isOnline={false}
    lastUpdate="thing"
    maxStreak={4}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    steps={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Pad
          height={60}
        />,
        <TouchableOpacity
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            isGrayScale={true}
            isLoading={false}
          />
        </TouchableOpacity>,
        <DailyStepsOffline
          lastUpdate="thing"
        />,
        false,
      ],
      "footerImage": "gray_forest",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 60,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": <YuCoin
            isGrayScale={true}
            isLoading={false}
          />,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isGrayScale": true,
            "isLoading": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "lastUpdate": "thing",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      false,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Pad
            height={60}
          />,
          <TouchableOpacity
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              isGrayScale={true}
              isLoading={false}
            />
          </TouchableOpacity>,
          <DailyStepsOffline
            lastUpdate="thing"
          />,
          false,
        ],
        "footerImage": "gray_forest",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              isGrayScale={true}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "isGrayScale": true,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "lastUpdate": "thing",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
